--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
+@import url('https://fonts.cdnfonts.com/css/basier-square-narrow');
+
+
+*{
+  font-family: 'Basier Square Narrow', sans-serif;
+}
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Basier Square Narrow', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App{
+  background-color: rgb(37, 7, 156);
+  color: #fff;
+  padding: 2em;
+  height: 100vh;
 }
+
+.App div{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.App div button{
+  background-color: #fff;
+  border-radius: 10px;
+  padding: .5em 1em;
+  color: rgb(37, 7, 156);
+}
+
+Table{
+  max-width: 80%;
+}
+
